2003-07-28  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (handle_configure): Cosmetic change to avoid
	a maintainer-check complaint.

2003-07-27  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/Automake/Variable.pm (@EXPORT): Remove variable_dump.
	(variable_dump): Replace by ...
	(dump): ... this method.
	(rdef, _check_ambiguous_condition): Adjust to use ->dump.
	(define, variables_dump): Adjust to use Automake::Variable::dump

	* lib/am/compile.am (mostlyclean-compile): Do not erase core dumps.
	* automake.texi (Built sources example): Adjust example.

2003-07-26  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (get_object_extension, handle_languages)
	(handle_single_transform_list, handle_compile, handle_compile)
	(handle_texinfo_helper, handle_texinfo_helper, handle_man_pages)
	(handle_tests, handle_minor_options, check_gnu_standards)
	(lang_sub_obj, lang_c_rewrite, lang_c_finish, rule_define):
	Simplify "if (defined $options{'X'})" into "if ($options{'X'})".

	Complete changes from 2003-07-08.
	* automake.in ($cmdline_use_dependencies, $use_dependencies): Remove,
	replaced by $options{'no-dependencies'}.
	($global_options): Remove.
	(%global_options): New variable.
	(initialize_per_input): Empty %options.
	(process_option_list): Take a location and %options ref argument,
	process no-dependencies as other options.
	(handle_options): Do not reparse the global options, just initialize
	%options from %global_options and fill it with local options.
	(handle_languages, handle_single_transform_list)
	(handle_configure, check_cygnus): Adjust usage of
	$options{'no-dependencies'}.
	(make_paragraphs): Adjust usage of $options{'cygnus'}.
	(parse_arguments): Set cygnus and no-dependencies in %global_options.
	(scan_autoconf_traces) <AM_INIT_AUTOMAKE>: Call process_option_list
	to fill %global_options.

2003-07-25  Alexandre Duret-Lutz  <adl@gnu.org>

	* tests/remake4.test: Use `$MAKE distdir' instead of `$MAKE dist' to
	avoid the use of tar.
